<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/alert_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:strokeColor="@color/red"
        app:strokeWidth="1dp"
        app:cardBackgroundColor="@color/background"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp">
            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:text="@string/dialog_title"
                android:textColor="@color/red"
                android:shadowColor="@color/red"
                android:shadowRadius="20"
                android:textSize="32dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/dialog_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:text="@string/dialog_description"
                android:textAlignment="center"
                android:textColor="@color/dark_red"
                android:textSize="24dp"
                android:layout_alignBottom="@id/dialog_title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/okButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_send_shape"
                    android:text="@string/dialog_accept_text"
                    android:textColor="@color/red"/>

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_send_shape"
                    android:text="@string/dialog_cancel_text"
                    android:textColor="@color/red"/>
            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>